--- a/suptertask/CMakeLists.txt
+++ b/suptertask/CMakeLists.txt
@@ -5,7 +5,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_EXAMPLES "Build examples" OFF)
 option(BUILD_TESTS "Build tests" ON)
+######
+include("tools/gate/cmake/HunterGate.cmake")
 
+HunterGate(
+  URL "https://github.com/ruslo/hunter/archive/v0.23.214.tar.gz"
+  SHA1 "e14bc153a7f16d6a5eeec845fb0283c8fad8c358"
+)
+######
 project(RKtimp2)
 
 add_library(RKtimp2 STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/sqrt.cpp)
