--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 
 script:
     - cd suptertask
+    - cmake -H. -B.build -DBUILD_DEMO=On
     - cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install -DBUILD_TESTS=ON
     - cmake --build _build
     - cmake --build _build --target install
