--- a/suptertask/CMakeLists.txt
+++ b/suptertask/CMakeLists.txt
@@ -13,13 +13,14 @@ HunterGate(
   SHA1 "e14bc153a7f16d6a5eeec845fb0283c8fad8c358"
 )
 ######
-project(suptertask)
+project(RKtimp2)
 
-add_library(suptertask STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/sqrt.cpp)
+
+add_library(RKtimp2 STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/sqrt.cpp)
 
 add_executable(demo ${CMAKE_CURRENT_SOURCE_DIR}/examples/demo.cpp)
 
-target_include_directories(suptertask PUBLIC
+target_include_directories(RKtimp2 PUBLIC
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                            $<INSTALL_INTERFACE:include>
                            )
@@ -31,21 +32,21 @@ file(GLOB EXAMPLE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/examples/*.cpp")
 foreach (EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
 get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
 add_executable(${EXAMPLE_NAME} ${EXAMPLE_SOURCE})
-target_link_libraries(${EXAMPLE_NAME} suptertask)
+target_link_libraries(${EXAMPLE_NAME} RKtimp2)
 install(TARGETS ${EXAMPLE_NAME}
         RUNTIME DESTINATION bin
         )
 endforeach (EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
 endif ()
 
-install(TARGETS suptertask
-        EXPORT suptertask-config
+install(TARGETS RKtimp2
+        EXPORT RKtimp2-config
         ARCHIVE DESTINATION lib
         LIBRARY DESTINATION lib
         )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include)
-install(EXPORT suptertask-config DESTINATION cmake)
+install(EXPORT RKtimp2-config DESTINATION cmake)
 
 if (BUILD_TESTS)
 enable_testing()
