--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,7 @@
-language: cpp
-
+language: generic
+services:
+  - docker
+  
 script:
-    - cd suptertask
-    - cmake -H. -B.build -DBUILD_DEMO=ON
-    - cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install -DBUILD_TESTS=ON
-    - cmake --build _build
-    - cmake --build _build --target install
-    - cmake --build _build --target test
-    - cd _build
-    - ./tests
-
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports
-    packages:
-      - cmake
-      - cmake-data
+  - cd suptertask
+  - docker build -t logger .
