--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "suptertask/tools/polly"]
+	path = tools/polly
+	url = https://github.com/ruslo/polly
 [submodule "suptertask/teatea/gtest"]
 	path = suptertask/teatea/gtest
 	url = https://github.com/google/googletest
