--- a/suptertask/Dockerfile
+++ b/suptertask/Dockerfile
@@ -7,7 +7,7 @@ RUN apt update
 RUN apt install -yy git g++ cmake vim
 RUN mkdir -p ~/workspace/projects/RKtimp2/suptertask
 WORKDIR ~/workspace/projects/RKtimp2/suptertask
-RUN git clone https://github.com/Sudar-Kudr/suptertask.git .
+RUN git clone https://github.com/Sudar-Kudr/RKtimp2.git .
 
 RUN cmake -H. -B_build -DCMAKE_INSTALL_PREFIX=_install -DBUILD_TESTS=ON
 RUN cmake --build _build --target install
