--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: generic
+/*language: generic
 services:
   - docker
   
 script:
   - cd suptertask
-  - docker build -t logger .
+  - docker build -t logger .*/
